--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				    <div class="round-thumb-container">
                     <div class="round-thumb">
                      	 <span>
-                             <a title="E-Cell" href="http://ecell.preseed.in"><img class="lazy" src="images/gallery/carpe.jpg" alt=""/></a>                         
+                             <a title="E-Cell" href="http://ecell.preseed.in"><img  src="ver1/images/gallery/logo.jpg" alt=""/></a>                         
                          </span>                    
                     </div>
               </div>
